[package]
name = "asyncc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
log = "0.4.17"
array-init = "2.0.0"
heapless = { version = "0.8", features = ["mpmc_large"] }

asyncc-pac = { path = "./asyncc-pac"}