[package]
name = "rafos-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9.0"
asyncc = { path = "../asyncc" }
console = { path = "../rafos-crates/rafos-console", package = "rafos-console" }
syscall = { path = "../rafos-crates/rafos-syscall", package = "rafos-syscall", features = ["user"]}
macros = { path = "../rafos-crates/rafos-macros", package = "rafos-macros" }
log = "0.4.17"

# [profile.release]
# opt-level = 0