[package]
name = "rafos-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9"
sbi-rt = { version = "0.0.2", features = ["legacy"], optional = true }
syscall = { path = "../rafos-syscall", package = "rafos-syscall", optional = true }
log = "0.4.17"


[features]
kernel = ["sbi-rt"]
std = []
user = ["syscall"]

default = ["std"]
