[package]
name = "rafos-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = {version = "0.8.0", features = ["mpmc_large"] }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
log = "0.4.17"
array-init = "2.0.0"


[features]
prio-level-4 = []
prio-level-8 = []
prio-level-16 = []

default = ["prio-level-8"]