[package]
name = "rafos-syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = {path = "../rafos-macros", package = "rafos-macros"}
errno = {path = "../rafos-errno", package = "rafos-errno"}

numeric-enum-macro = "0.2.0"
bitflags = "2.4.1"


[features]
user = []