[package]
name = "rafos-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9.0"
spin = "0.9"
executor = { path = "../../rafos-executor", package = "rafos-executor"}


[features]
std = []

[lib]
crate-type = ["cdylib"]
