[package]
name = "rafos-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor = { path = "../../rafos-crates/rafos-executor", package = "rafos-executor" }
spin = "0.9"


[lib]
crate-type = ["cdylib"]
